dol/dol-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp:
  labels:
    run: dol
  name: dol
spec:
  replicas: 1
  selector:
    matchLabels:
      run: dol
  strategy: {}
  template:
    metadata:
      creationTimestamp:
      labels:
        run: dol
    spec:
      containers:
      - image: 596664304429.dkr.ecr.us-east-1.amazonaws.com/csps/dol:latest
        name: dol
        ports:
        - containerPort: 5054
        resources: {}
status: {}
